--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="author" content="Untree.co">
         <link rel="shortcut icon" href="web/images/logo.jpg">
 
-        <meta name="description" content="" />
-        <meta name="keywords" content="bootstrap, bootstrap4" />
-
+        <meta name="description" content="بخبرة تمتد لسنوات، نقدم حلولًا متميزة للزجاج والألمنيوم والحديد في جدة والمناطق المحيطة. نحن ملتزمون بتوفير. تصاميم أنيقة وعملية تضيف قيمة جمالية ووظيفية للمساحات السكنية والتجارية" />
+        <meta name="keywords" content="معلم زجاج شرفية جده,معلم زجاج البلد,معلم زجاج جده,معلم زجاج" />
+        <meta property="og:title" content="حلول زجاجية ومعدنية عالية الجودة لكل احتياجاتك|جاسم بلال.معلم زجاج" />
+        <meta property="og:description" content="بخبرة تمتد لسنوات، نقدم حلولًا متميزة للزجاج والألمنيوم والحديد في جدة والمناطق المحيطة. نحن ملتزمون بتوفير. تصاميم أنيقة وعملية تضيف قيمة جمالية ووظيفية للمساحات السكنية والتجارية" />
         <!-- Bootstrap CSS -->
         <link href="web/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
