--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="shortcut icon" href="web/images/logo.jpg">
 
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="معلم زجاج جده0546818718,معلم الزجاج,معلم زجاج البلد">
+        <meta property="og:url" content="https://bilalglassvision.com/">
+        <meta property="og:description" content="بخبرة تمتد لسنوات، نقدم حلولًا متميزة للزجاج والألمنيوم والحديد في جدة والمناطق المحيطة. نحن ملتزمون بتوفير. تصاميم أنيقة وعملية تضيف قيمة جمالية ووظيفية للمساحات السكنية والتجارية" />
         <meta name="description" content="بخبرة تمتد لسنوات، نقدم حلولًا متميزة للزجاج والألمنيوم والحديد في جدة والمناطق المحيطة. نحن ملتزمون بتوفير. تصاميم أنيقة وعملية تضيف قيمة جمالية ووظيفية للمساحات السكنية والتجارية" />
         <meta name="keywords" content="معلم زجاج شرفية جده,معلم زجاج البلد,معلم زجاج جده,معلم زجاج" />
-        <meta property="og:title" content="حلول زجاجية ومعدنية عالية الجودة لكل احتياجاتك|جاسم بلال.معلم زجاج" />
-        <meta property="og:description" content="بخبرة تمتد لسنوات، نقدم حلولًا متميزة للزجاج والألمنيوم والحديد في جدة والمناطق المحيطة. نحن ملتزمون بتوفير. تصاميم أنيقة وعملية تضيف قيمة جمالية ووظيفية للمساحات السكنية والتجارية" />
         <!-- Bootstrap CSS -->
         <link href="web/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
