--- a/contact.html
+++ b/contact.html
@@ -3,18 +3,21 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="author" content="Untree.co">
         <link rel="shortcut icon" href="web/images/logo.jpg">
 
-        <meta name="description" content="" />
-        <meta name="keywords" content="bootstrap, bootstrap4" />
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="معلم زجاج جده0546818718,معلم الزجاج,معلم زجاج البلد">
+        <meta property="og:url" content="https://bilalglassvision.com/">
+        <meta property="og:description" content="بخبرة تمتد لسنوات، نقدم حلولًا متميزة للزجاج والألمنيوم والحديد في جدة والمناطق المحيطة. نحن ملتزمون بتوفير. تصاميم أنيقة وعملية تضيف قيمة جمالية ووظيفية للمساحات السكنية والتجارية" />
+        <meta name="description" content="بخبرة تمتد لسنوات، نقدم حلولًا متميزة للزجاج والألمنيوم والحديد في جدة والمناطق المحيطة. نحن ملتزمون بتوفير. تصاميم أنيقة وعملية تضيف قيمة جمالية ووظيفية للمساحات السكنية والتجارية" />
+        <meta name="keywords" content="معلم زجاج شرفية جده,معلم زجاج البلد,معلم زجاج جده,معلم زجاج" />
 
         <!-- Bootstrap CSS -->
         <link href="web/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
         <link href="web/css/tiny-slider.css" rel="stylesheet">
         <link href="web/css/style.css" rel="stylesheet">
-        <title>رؤية بلال للزجاج</title>
+        <title>معلم زجاج شرفية جده,0546818718</title>
 	</head>
 
 	<body>
