--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
         <link href="web/css/tiny-slider.css" rel="stylesheet">
         <link href="web/css/style.css" rel="stylesheet">
-        <title>رؤية بلال للزجاج</title>
+        <title>معلم زجاج جده</title>
 	</head>
 
 	<body>
