--- a/gallery.html
+++ b/gallery.html
@@ -6,19 +6,18 @@
         <link rel="shortcut icon" href="web/images/logo.jpg">
 
         <meta property="og:type" content="website">
-        <meta property="og:title" content="معلم زجاج جده0546818718,معلم الزجاج,معلم زجاج البلد">
         <meta property="og:url" content="https://bilalglassvision.com/">
-        <meta property="og:description" content="بخبرة تمتد لسنوات، نقدم حلولًا متميزة للزجاج والألمنيوم والحديد في جدة والمناطق المحيطة. نحن ملتزمون بتوفير. تصاميم أنيقة وعملية تضيف قيمة جمالية ووظيفية للمساحات السكنية والتجارية" />
-        <meta name="description" content="بخبرة تمتد لسنوات، نقدم حلولًا متميزة للزجاج والألمنيوم والحديد في جدة والمناطق المحيطة. نحن ملتزمون بتوفير. تصاميم أنيقة وعملية تضيف قيمة جمالية ووظيفية للمساحات السكنية والتجارية" />
-        <meta name="keywords" content="معلم زجاج شرفية جده,معلم زجاج البلد,معلم زجاج جده,معلم زجاج" />
-
+        <meta property="og:title" content="معلم زجاج جدة - تركيب وتصميم الزجاج السيكوريت والألمنيوم بأعلى جودة">
+        <meta property="og:description" content="خبرة في تركيب وتصميم الزجاج السيكوريت، الألمنيوم، والحديد بجودة عالية. أفضل الأسعار في جدة! اتصل بنا الآن 0546818718.">
+        <meta name="description" content="خبرة في تركيب وتصميم الزجاج السيكوريت، الألمنيوم، والحديد بجودة عالية. أفضل الأسعار في جدة! اتصل بنا الآن 0546818718.">
+        <meta name="keywords" content="معلم زجاج جدة, زجاج سيكوريت جدة, تركيب زجاج, أبواب زجاجية جدة, ديكورات زجاج, زجاج ألمنيوم جدة">
         <!-- Bootstrap CSS -->
         <link href="web/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
         <link href="web/css/tiny-slider.css" rel="stylesheet">
         <link href="web/css/style.css" rel="stylesheet">
-        <title>معلم زجاج البلد</title>
-	</head>
+        <title>معلم زجاج جدة | تركيب وتصميم الزجاج بجودة عالية</title>
+    </head>
 
 	<body>
 
@@ -27,7 +26,7 @@
 
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="web/images/logo.jpg" alt="Bootstrap" width="100" height="100">
+                    <img src="web/images/logo.jpg" alt="معلم زجاج جدة - تصاميم وتركيب زجاج سيكوريت" width="100" height="100" loading="lazy">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
