--- a/index.html
+++ b/index.html
@@ -6,17 +6,17 @@
         <link rel="shortcut icon" href="web/images/logo.jpg">
 
         <meta property="og:type" content="website">
-        <meta property="og:title" content="معلم زجاج جده0546818718,معلم الزجاج,معلم زجاج البلد">
         <meta property="og:url" content="https://bilalglassvision.com/">
-        <meta property="og:description" content="بخبرة تمتد لسنوات، نقدم حلولًا متميزة للزجاج والألمنيوم والحديد في جدة والمناطق المحيطة. نحن ملتزمون بتوفير. تصاميم أنيقة وعملية تضيف قيمة جمالية ووظيفية للمساحات السكنية والتجارية" />
-        <meta name="description" content="بخبرة تمتد لسنوات، نقدم حلولًا متميزة للزجاج والألمنيوم والحديد في جدة والمناطق المحيطة. نحن ملتزمون بتوفير. تصاميم أنيقة وعملية تضيف قيمة جمالية ووظيفية للمساحات السكنية والتجارية" />
-        <meta name="keywords" content="معلم زجاج شرفية جده,معلم زجاج البلد,معلم زجاج جده,معلم زجاج" />
+        <meta property="og:title" content="معلم زجاج جدة - تركيب وتصميم الزجاج السيكوريت والألمنيوم بأعلى جودة">
+        <meta property="og:description" content="خبرة في تركيب وتصميم الزجاج السيكوريت، الألمنيوم، والحديد بجودة عالية. أفضل الأسعار في جدة! اتصل بنا الآن 0546818718.">
+        <meta name="description" content="خبرة في تركيب وتصميم الزجاج السيكوريت، الألمنيوم، والحديد بجودة عالية. أفضل الأسعار في جدة! اتصل بنا الآن 0546818718.">
+        <meta name="keywords" content="معلم زجاج جدة, زجاج سيكوريت جدة, تركيب زجاج, أبواب زجاجية جدة, ديكورات زجاج, زجاج ألمنيوم جدة">
         <!-- Bootstrap CSS -->
         <link href="web/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" rel="stylesheet">
         <link href="web/css/tiny-slider.css" rel="stylesheet">
         <link href="web/css/style.css" rel="stylesheet">
-        <title>معلم زجاج جده</title>
+        <title>معلم زجاج جدة | تركيب وتصميم الزجاج بجودة عالية</title>
 	</head>
 
 	<body>
@@ -26,7 +26,7 @@
 
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="web/images/logo.jpg" alt="Bootstrap" width="100" height="100">
+                    <img src="web/images/logo.jpg" alt="معلم زجاج جدة - تصاميم وتركيب زجاج سيكوريت" width="100" height="100" loading="lazy">
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsFurni" aria-controls="navbarsFurni" aria-expanded="false" aria-label="Toggle navigation">
@@ -53,7 +53,7 @@
             <div class="container text-center">
                 <div class="row align-items-center">
                     <div class="col text-center pb-5">
-                            <h1><span clsas="d-block">رؤية بلال للزجاج</span></h1>
+                            <h1><span class="d-block">معلم زجاج جدة - تركيب وتصميم زجاج سيكوريت بأعلى جودة</span></h1>
                             <h3 class="mb-4 text-light">حلول زجاجية ومعدنية عالية الجودة لكل احتياجاتك</h3>
                             <p class="fs-4">مرحبًا بكم في رؤية بلال للزجاج، شريككم الموثوق للحلول المتخصصة في الزجاج، الألمنيوم، والحديد. نحن متخصصون في تركيب وإصلاح وتصميم الزجاج المخصص للمشاريع السكنية والتجارية والصناعية في جدة</p>
                             <a href="contact.html" class="btn btn-secondary me-2 fs-5">اتصل بنا</a>
@@ -79,7 +79,7 @@
                                 <div class="col-sm-6 col-lg-3 col-md-4 text-center">
                                     <div class="feature">
                                         <div class="icon">
-                                            <img src="web/images/truck.svg" alt="Glass Vision" class="imf-fluid">
+                                            <img src="web/images/truck.svg" alt="معلم زجاج جدة - تصاميم وتركيب زجاج سيكوريت" class="imf-fluid">
                                         </div>
                                         <h2>خدمة سريعة وموثوقة</h2>
                                     </div>
@@ -88,7 +88,7 @@
                                 <div class="col-sm-6 col-lg-3 col-md-4 text-center">
                                     <div class="feature">
                                         <div class="icon">
-                                            <img src="web/images/bag.svg" alt="Glass Vision" class="imf-fluid">
+                                            <img src="web/images/bag.svg" alt="معلم زجاج جدة - تصاميم وتركيب زجاج سيكوريت" class="imf-fluid">
                                         </div>
                                         <h2>أسعار تنافسية</h2>
                                     </div>
@@ -97,7 +97,7 @@
                                 <div class="col-sm-6 col-lg-3 col-md-4 text-center">
                                     <div class="feature">
                                         <div class="icon">
-                                            <img src="web/images/support.svg" alt="Glass Vision" class="imf-fluid">
+                                            <img src="web/images/support.svg" alt="معلم زجاج جدة - تصاميم وتركيب زجاج سيكوريت" class="imf-fluid">
                                         </div>
                                         <h2>مواد عالية الجودة</h2>
                                     </div>
@@ -106,7 +106,7 @@
                                 <div class="col-sm-6 col-lg-3 col-md-4 text-center">
                                     <div class="feature">
                                         <div class="icon">
-                                            <img src="web/images/return.svg" alt="Glass Vision" class="imf-fluid">
+                                            <img src="web/images/return.svg" alt="معلم زجاج جدة - تصاميم وتركيب زجاج سيكوريت" class="imf-fluid">
                                         </div>
                                         <h2>مهارة وحرفية عالية</h2>
                                     </div>
@@ -445,6 +445,22 @@
         </footer>
         <!-- End Footer Section -->	
 
+        <script type="application/ld+json">
+            {
+              "@context": "https://schema.org",
+              "@type": "LocalBusiness",
+              "name": "معلم زجاج جدة",
+              "url": "https://bilalglassvision.com/",
+              "telephone": "0546818718",
+              "address": {
+                "@type": "PostalAddress",
+                "addressLocality": "جدة",
+                "addressCountry": "SA"
+              },
+              "image": "https://bilalglassvision.com/web/images/logo.jpg",
+              "description": "متخصصون في تركيب وتصميم الزجاج والألمنيوم والحديد بجدة بخبرة سنوات"
+            }
+        </script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="web/js/bootstrap.bundle.min.js"></script>
 		<script src="web/js/tiny-slider.js"></script>
